# SwiftOS-Desktop

./: .gitignore  CMakeLists.txt
applets/kicker/: CMakeLists.txt
applets/kicker/plugin/: appsmodel.cpp  appsmodel.h  imagepicker.h
applets/pager/: CMakeLists.txt
applets/pager/plugin/: pager.cpp
applets/taskmanager/: CMakeLists.txt
containments/folder/plugin/: directorypicker.cpp  directorypicker.h
kcms/keyboard/: CMakeLists.txt  bindings.cpp  kcm_keyboard_widget.cpp  keyboard_hardware.cpp
